--- a/Portfolio.html
+++ b/Portfolio.html
@@ -84,33 +84,35 @@
     </nav>
     <div class="container" id="welcome">
         <section class="section">
-            <h2>Welcome</h2>
-            <p>Hello! My name is Evan Cleveland and I am a computer science major at Georgia Tech. This portfolio will showcase my professional and personal achievements, projects, and interests. This site is obviously under construction, so keep checking in for updates!</p>
+            <h2>Welcome!</h2>
+            <p>My name is Evan Cleveland and I am a computer science major at Georgia Tech, with intentions to graduate in May 2027. 
+            This portfolio will showcase my professional and personal achievements, projects, and interests. This site is obviously under construction, so keep checking in for updates!</p>
         </section>
     </div>
     <div class="container" id="professional">
         <section class="section">
-            <h2>Professional/Educational</h2>
-            <h3>Education</h3>
-            <p><strong>Georgia Institute of Technology</strong> - Bachelor of Science in Computer Science</p>
-            <p>Expected Graduation: May 2027</p>
-            <h3>Experience</h3>
-            <p><strong>Intern at Tech Company XYZ</strong> - Summer 2023</p>
-            <p>Developed a new feature for the company's main product, improving user engagement by 15%.</p>
-            <h3>Projects</h3>
-            <p><strong>Project Name</strong> - Description of the project and its impact.</p>
-            <p><strong>Project Name</strong> - Description of the project and its impact.</p>
+            <h2>What I am Working On:</h2>
+            <h3>Skills</h3>
+            <p><strong>HTML/CSS</strong> - For basic web development and simple frontend
+                <strong>
+                Git && Github
+                Node.js
+                React.js
+            </strong></p>
+            <h3>Projects - (More details and images coming soon)</h3>
+            <p><strong>RunMaps Social Media</strong> - Using Google Maps API for route sharing and customization</p>
+            <p><strong>Three Player Chess</strong> - A fun math and coding challenge to deal with abnormal math scenarios</p>
         </section>
     </div>
     <div class="container" id="personal">
         <section class="section">
             <h2>Personal</h2>
             <h3>Interests</h3>
-            <p>I am passionate about coding, artificial intelligence, and machine learning. In my free time, I enjoy hiking, photography, and playing the guitar.</p>
+            <p>Simulations (Fluids & Traffic), Artificial Intelligence (Computer Vision), Cybersecurity, IoT.</p>
             <h3>Hobbies</h3>
-            <p><strong>Hiking</strong> - I love exploring new trails and being in nature.</p>
-            <p><strong>Photography</strong> - Capturing moments through the lens is one of my favorite pastimes.</p>
-            <p><strong>Guitar</strong> - Playing the guitar helps me relax and unwind.</p>
+            <p><strong>Drumming</strong> - I have been drumming for about eight years, so music is an integral part of my life.</p>
+            <p><strong>Rock Climbing</strong> - For me, climbing is a great way to get out of the house with friends and test my physical limits.</p>
+            <p><strong>Nature</strong> - As much as possible, I try and get out into the world and appreciate what is before us!.</p>
         </section>
     </div>
     <footer>
@@ -125,7 +127,6 @@
             document.getElementById(pageId).classList.add('active');
         }
 
-        // Show the welcome page by default
         showPage('welcome');
     </script>
 </body>
