--- a/index.html
+++ b/index.html
@@ -93,11 +93,11 @@
         <section class="section">
             <h2>What I am Working On:</h2>
             <h3>Skills</h3>
-            <p><strong>HTML/CSS</strong> - For basic web development and simple frontend
+            <p><strong>HTML/CSS</strong> - For basic web development and simple frontend<br>
                 <strong>
-                Git && Github
-                Node.js
-                React.js
+                Git && Github<br>
+                Node.js<br>
+                React.js<br>
             </strong></p>
             <h3>Projects - (More details and images coming soon)</h3>
             <p><strong>RunMaps Social Media</strong> - Using Google Maps API for route sharing and customization</p>
