Picture Menu Images

--- a/index.html
+++ b/index.html
@@ -70,6 +70,11 @@
             width: 100%;
             bottom: 0;
         }
+
+        image {
+            height: 50px;
+            width: 75px;
+        }
     </style>
 </head>
 <body>
@@ -92,6 +97,17 @@
     <div class="container" id="professional">
         <section class="section">
             <h2>What I am Working On:</h2>
+            <h3>PictureMenu Internship</h3>
+            <p>For the past few months, I have been working with PictureMenu, an early stage startup that offers an alternative to standard QR Code restaurant menus that simply load a pdf.<br>
+                 My directive was to prepare the app for a partnership pitch with a commonly used point of sale system. This includes planning the workload and timeframe of POS integration as well as making aesthetic changes and prototyping new features.
+                <br>Using <strong>Javascript and Node.js</strong> I have implemented a basic ordering system to be integrated with Point of Sale, which will drastically increase the app's value.
+            <br> Using <strong>React.js</strong> I have made the graphic changes that you can see below:</p>
+            <div class = "container.active" id = "pmImages" display = "flex">
+                <p>Before:</p>
+                <img src = "./assets/pmBefore.png" alt = "Before" width = "480px" height = "300px">
+                <p>After:</p>
+                <img src = "./assets/pmAfter.png" alt = "After" width = "540px" height = "300px">
+            </div>
             <h3>Skills</h3>
             <p><strong>HTML/CSS</strong> - For basic web development and simple frontend<br>
                 <strong>
@@ -101,7 +117,7 @@
             </strong></p>
             <h3>Projects - (More details and images coming soon)</h3>
             <p><strong>RunMaps Social Media</strong> - Using Google Maps API for route sharing and customization</p>
-            <p><strong>Three Player Chess</strong> - A fun math and coding challenge to deal with abnormal math scenarios</p>
+<p><strong>Three Player Chess</strong> - A fun math and coding challenge to deal with abnormal coordinate systems</p>
         </section>
     </div>
     <div class="container" id="personal">
