--- a/index.html
+++ b/index.html
@@ -132,12 +132,27 @@
             <h2>Welcome!</h2>
             <p>My name is Evan Cleveland and I am a computer science major at Georgia Tech, with intentions to graduate in May 2027. 
             This portfolio will showcase my professional and personal achievements, projects, and interests. This site is continuously under construction, so keep checking in for updates!</p>
+            <br>
+            <br>
+            To see more about me, my LinkedIn and Github can be found at the top left.
         </section>
     </div>
     <div class="container" id="professional">
         <section class="section">
-            <h2>What I am Working On:</h2>
-            <h3>PictureMenu Internship</h3>
+            <h2>My Current Skills:</h2>
+            <h3>Programming Languages</h3>
+            <p>Java <br>
+                Python <br>
+                Javascript <br>
+                HTML/CSS <br>
+            </p>
+            <h3>Tools</h3>
+            <p>React.js <br>
+                Node.js <br>
+                Git && GitHub <br>
+            </p>
+            <h2>Work Experience:</h2>
+            <h3>Software Development Internship - PictureMenu</h3>
             <p>For the past few months, I have been working with PictureMenu, an early stage startup that offers an alternative to standard QR Code restaurant menus that simply load a pdf.<br>
                  My directive was to prepare the app for a partnership pitch with a commonly used point of sale system. This includes planning the workload and timeframe of POS integration as well as making aesthetic changes and prototyping new features.
                 <br>Using <strong>Javascript and Node.js</strong> I have implemented a basic ordering system to be integrated with Point of Sale, which will drastically increase the app's value.
@@ -148,16 +163,38 @@
                 <p>After:</p>
                 <img src="./assets/pmAfter.png" alt="After" width="540px" height="300px" style="border-radius: 10px; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);">
             </div>
-            <h3>Skills</h3>
-            <p><strong>HTML/CSS</strong> - For basic web development and simple frontend<br>
-                <strong>
-                Git && Github<br>
-                Node.js<br>
-                React.js<br>
-            </strong></p>
-            <h3>Projects - (More details and images coming soon)</h3>
-            <p><strong>RunMaps Social Media</strong> - Using Google Maps API for route sharing and customization</p>
-            <p><strong>Three Player Chess</strong> - A fun math and coding challenge to deal with abnormal coordinate systems</p>
+            <h3>Performing Instrumentalist - McEachern United Methodist Church</h3>
+            <p>For about three years in high school, I worked as a musician at a local church. <br>
+                I was in charge of maintaining musical equipment, running small group performances, and maintaing a system to keep various files organized.</p>
+            <h2>Completed Coursework:</h2>
+            <p>Object Oriented Programming <br>
+                Linear Algebra <br>
+                Differential Equations <br>
+                Probabilistic and Statistical Methods <br>
+                Discrete Mathematics <br>
+                Physics I and II <br>
+            </p>
+            <h2>Projects:</h2>
+            <h3>The Robot Collective</h3>
+            <p>As part of my coursework, I will be working in a Vertically Integrated Project (VIP) Team. My team is named <a href="https://vip.gatech.edu/teams/vwn">The Robot Collective</a> consisting of Dr. Sam Coogan, Dr. Sean Wilson, and about twenty undergraduate students.<br>
+            The project has just begun, but my role will likely be to integrate new robots with the <a href="https://www.robotarium.gatech.edu/">Georgia Tech Robotarium</a> using <strong>Raspberry Pi OS</strong> and <strong>Arduinos</strong>.</p>
+            <h3>Recibot</h3>
+            <p>Recibot is a tool that I built using <strong>Python, Google Gemini AI, and the Selenium Library</strong> that is primarily a web-scraper and recipe generator.<br>
+                The script opens the Publix weekly sales ad, and parses the html in order to list the items that are on sale in each category. Users can then choose to score recipes that they have entered or generate a recipe using the Gemini API, which does require a private API key (instructions in the README).<br>
+                The app is currently molded to my needs, but could easily be adjusted to be more customizable. Check my github to try it yourself!
+            </p>
+            <h3>Three Player Chess</h3>
+            <p>A fun math and coding challenge to deal with abnormal coordinate systems.<br>
+                In the last week before the Fall 2024 semester, I have used <strong>Javascript</strong>to develop a functioning Two Player Chess game.<br>
+                I am now working on implementing functions and board design to create the Three Player version of the game, and a grid system to use as the basis for validating moves.<br>
+                Once this is complete, I hope to clean up the UI and implement online multiplayer!
+                <img src="./assets/pmBefore.png" alt="Before" width="480px" height="300px" style="border-radius: 10px; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);">
+            </p>
+            <h2>Current Coursework:</h2>
+            <p>Data Structures and Algorithms <br>
+                Computer Organization and Programming <br>
+                Programming Objects and Design Principles <br>
+            </p>
         </section>
     </div>
     <div class="container" id="personal">
