fixed wrong image

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             This portfolio will showcase my professional and personal achievements, projects, and interests. This site is continuously under construction, so keep checking in for updates!</p>
             <br>
             <br>
-            To see more about me, my LinkedIn and Github can be found at the top left.
+            To see more about me, visit the "Professional/Educational" tab. Additionally, my LinkedIn and Github can be found at the top left!
         </section>
     </div>
     <div class="container" id="professional">
@@ -185,10 +185,10 @@
             </p>
             <h3>Three Player Chess</h3>
             <p>A fun math and coding challenge to deal with abnormal coordinate systems.<br>
-                In the last week before the Fall 2024 semester, I have used <strong>Javascript</strong>to develop a functioning Two Player Chess game.<br>
+                In the last week before the Fall 2024 semester, I have used <strong>Javascript</strong> to develop a functioning Two Player Chess game.<br>
                 I am now working on implementing functions and board design to create the Three Player version of the game, and a grid system to use as the basis for validating moves.<br>
-                Once this is complete, I hope to clean up the UI and implement online multiplayer!
-                <img src="./assets/pmBefore.png" alt="Before" width="480px" height="300px" style="border-radius: 10px; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);">
+                Once this is complete, I hope to clean up the UI and implement online multiplayer!<br>
+                <img src="./assets/chess.png" alt="Before" width="480px" height="300px" style="border-radius: 10px; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);">
             </p>
             <h2>Current Coursework:</h2>
             <p>Data Structures and Algorithms <br>
