--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@
             </p>
             <h3>Tools</h3>
             <p>React.js <br>
+                Django<br>
                 Node.js <br>
                 Git && GitHub <br>
             </p>
@@ -191,9 +192,9 @@
                 <img src="./assets/chess.png" alt="Before" width="480px" height="300px" style="border-radius: 10px; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);">
             </p>
             <h2>Current Coursework:</h2>
-            <p>Data Structures and Algorithms <br>
-                Computer Organization and Programming <br>
-                Programming Objects and Design Principles <br>
+            <p>Data Structures and Algorithms - Learning implementation of data storage and searching<br>
+                Computer Organization and Programming - Building computer components from transistor level in circuit simulator and coding in C<br>
+                Programming Objects and Design Principles - Learning design principles such as Agile and XP, working with a mentor that acts as a client for a group project<br>
             </p>
         </section>
     </div>
